gEDA

GNU Electronic Design Automation
------------------------------------------------------------------------------

ChangeLog for gnetlist

Most recent changes (version wise) are at the top of this file 

8/8/99 	Moved mk_verilog_syms to utils (created utils and Makefile.am)

8/5/99	Added some stuff to configure.in for win32 builds

8/3/99	Updated libtool to 1.3.3

	Integrated Mike Jarabek latest verilog backend
		- Patched g_netlist.c
		- Patched g_register.c
		- Patched gnetlist.scm
		- Added examples/sch/*.sch to examples
		- Added mk_verilog_syms to src
		- Added symbols to ../symbols

8/2/99	Added g_netlist_get_attribute, which allows you go find any toplevel
	attributes (not yet functional)

7/21/99 Removed all trace of s_passing.h

7/15/99	Added support for libgdgeda 1.6 (mainly means searching for libpng)

7/6/99  Changed configure and Makefiles to cut down on the number of 
	libraries which are linked

	Didn't really disable libgdgeda when using --disable-gdgeda
        Now fixed.

7/5/99 	Verified that gnetlist works with alphanumeric slotting

	Fixed all warnings 

	Renamed s_netlist_post_resolve to s_netlist_post_process

	Put Manu's configure.in changes into gnetlist as well
	
	Got configure.in to be almost identical to gnetlist/configure.in

	Updated man page slightly

7/4/99 	Integrated latest verilog backend from Mike 

	Changed Mike's all-nets function to use get-all-unique-nets 
	(equate same named nets together)

	Added some improved feedback when doing the net traversal with
	verbose mode on

7/3/99	Removed almost all executing traces of connected_to_[1|2] (these
	was replaced by connected_to)

	Added gnetlist:get-all-unique-nets which returns all the unique
	nets in the design

	Added gnetlist:get-all-connections which returns all connections
	which are associated with the argument netname 

	Worked on gnetlist.scm to use above functions.

	Got geda netlist format to use above functions correctly.
