@@ -25,6 +25,9 @@ Nuno Sucena             - For contributing the TANGO gnetlist backend
 
 Bas Gieltjes            - For contributing the SPICE gnetlist backend
 
+Matt Ettus		- For contributing the bill of materials guile
+			  code
+
 
 Also thanks go to all the people on the geda-dev mailing list.  Many of
 the subscribers provided good suggestions which are greatly appreciated
