@@ -15,11 +15,14 @@ Bugs (no particular order):
 	  dealt with properly...)
 
 	- Ordering of pin outputs in spice netlist ouput for components like 
-	  BJT transistors B C E.  This is wrong for now.
+	  BJT transistors B C E.  This is wrong for now. (might be fixed now)
 
 	- (SPICE backend) It is possible to have named a net something (say 1)
 	  and then have an unnamed net called 1 as well.  Obviously my
 	  unnamed net naming is lame.
+
+	- gnetlist:get-toplevel-attribute only looks for the first occurrance
+	  of the toplevel attribute.  Make this somehow better?
 
 
 Finished stuff:
