@@ -103,42 +103,42 @@ C 19700 5500 1 0 0 nor2-1.sym
 T 20000 5300 5 10 1 1 0
 uref=U20
 }
-C 21600 19500 1 0 0 not.sym
+C 21600 19500 1 0 0 not-1.sym
 {
 T 21900 19500 5 10 1 1 0
 uref=U21
 }
-C 21600 16500 1 0 0 not.sym
+C 21600 16500 1 0 0 not-1.sym
 {
 T 21900 16500 5 10 1 1 0
 uref=U22
 }
-C 21600 14100 1 0 0 not.sym
+C 21600 14100 1 0 0 not-1.sym
 {
 T 21900 14100 5 10 1 1 0
 uref=U23
 }
-C 21600 11600 1 0 0 not.sym
+C 21600 11600 1 0 0 not-1.sym
 {
 T 21900 11600 5 10 1 1 0
 uref=U24
 }
-C 21600 9800 1 0 0 not.sym
+C 21600 9800 1 0 0 not-1.sym
 {
 T 21900 9800 5 10 1 1 0
 uref=U25
 }
-C 21600 7600 1 0 0 not.sym
+C 21600 7600 1 0 0 not-1.sym
 {
 T 21900 7600 5 10 1 1 0
 uref=U39
 }
-C 21600 5300 1 0 0 not.sym
+C 21600 5300 1 0 0 not-1.sym
 {
 T 21900 5300 5 10 1 1 0
 uref=U40
 }
-C 10900 12700 1 0 0 not.sym
+C 10900 12700 1 0 0 not-1.sym
 {
 T 11200 12700 5 10 1 1 0
 uref=U26
