@@ -87,12 +87,12 @@ AC_CHECK_LIB(X11, XOpenDisplay, X_LIBS="-lX11", X_LIBS=no, $X_EXTRA_LIBS)
 AC_CHECK_LIB(Xext, XShmAttach, X_LIBS="-lXext $X_LIBS", X_EXT=no, $X_EXTRA_LIBS)
 dnl AC_CHECK_LIB(Xext, XShmAttach, X_LIBS="-lXext $X_LIBS", XEXT=no, $X_EXTRA_LIBS)
 
-if test "$CYGWIN" = no; then
+if test "$CYGWIN"x = x; then
 	if test "$X_LIBS" = no; then
           AC_MSG_ERROR(Cannot find -lX11 library)
         fi
 else
-	echo X11 not required for CYGNUS
+	echo X11 not required for CYGWIN port
 fi
 
 dnl Checking for rint in math library
@@ -291,5 +291,4 @@ AC_OUTPUT([
 	Makefile 
 	libgeda-config 
 	include/Makefile 
-	src/Makefile 
-	src/Makefilewin.in ], [chmod +x libgeda-config]) 
+	src/Makefile ], [chmod +x libgeda-config]) 
